--- a/about.html
+++ b/about.html
@@ -58,15 +58,29 @@
                         <a class="navbar-brand" href="index.html"><img src="images/logo-png-2.png" alt="image" width="250"></a>
                     </div>
                     <div class="site_information">
-                        <ul class="menu-abajo">
-                            <li><a href="mailto:maquinarias@gomaq.cl"><img src="images/mail_icon.png" alt="#" />maquinarias@gomaq.cl</a></li>
-                            <li><a href="tel:56985566008"><img src="images/phone_icon.png" alt="#" />+56985566008</a></li>
+                        <ul class="menu-arriba">
+                            <li>
+                                <a href="mailto:maquinarias@gomaq.cl">
+                                    <!--<img src="images/mail_icon.png" alt="#" />maquinarias@gomaq.cl-->
+                                    <i class="fa fa-envelope-o icono" aria-hidden="true"></i>
+                                    maquinarias@gomaq.cl
+                                </a>
+                            </a>
+                            </li>
+                            <li>
+                                <a href="tel:56985566008">
+                                    <!--<img src="images/phone_icon.png" alt="#" />+56985566008-->
+                                    <i class="fa fa-mobile icono" aria-hidden="true"></i>
+                                    +56985566008
+                                </a>
+                            </li>
+                            
                             <li>
                                 <a href="https://www.instagram.com/maquinariasgomaq/">
-                                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                                    <i class="fa fa-instagram icono" aria-hidden="true"></i>
                                  </a>
                                  <a href="https://www.facebook.com/profile.php?id=100066751450143">
-                                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                                    <i class="fa fa-facebook-official icono" aria-hidden="true"></i>
                                 </a>
                             </li>
                             <!--<li><a class="join_bt" href="#">Join us</a></li>-->
