--- a/index.html
+++ b/index.html
@@ -191,7 +191,10 @@
                         </div>
                     </div>
                     <div class="full paddding_left_15">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                        <p>Empresa de servicios de arriendo de maquinarias.
+
+                            Nuestra Empresa se convierte en un socio estratégico para sus clientes, entregando un
+                            servicio integral de arriendo de maquinarias, junto a un grupo profesional altamente capacitado.</p>
                     </div>
                 </div>
             </div>
