--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div class="full paddding_left_15">
                         <p>Empresa de servicios de arriendo de maquinarias.
 
-                            Nuestra Empresa se convierte en un socio estratégico para sus clientes, entregando un
+                            GoMAQ se convierte en un socio estratégico para sus clientes, entregando un
                             servicio integral de arriendo de maquinarias, junto a un grupo profesional altamente capacitado.</p>
                     </div>
                 </div>
