--- a/about.html
+++ b/about.html
@@ -143,8 +143,8 @@
                         </div>
                     </div>
                     <div class="full paddding_left_15">
-                        <p>GoMAQ comienza su camino como empresa de arriendo de grúas horquillas y plataformas elevadoras en el año 2020, con la finalidad de entregar un servicio de calidad y excelencia para nuestros y futuros clientes. GoMAQ nace por una idea propia donde se busca potenciar la marca brindando un servicio de calidad, para ello contamos con maquinarias y trabajadores capacitados que están al nivel correspondiente con lo que entrega la empresa.</p>
-                        <p>En 2020 GoMAQ inicia su relación comercial con Agroservicios Manquehue en donde se nos destaca por nuestro compromiso y calidad. En el segundo semestre del mismo año cerramos contratos con  Agrofarming, Guillaume, Ferretería La Popular, Rentokil y Ferretería Prat. Consolidándonos como una empresa de excelencia y así demostrando que llegamos para quedarnos.</p>
+                        <p>GOMAQ comienza su camino como empresa de arriendo de grúas horquillas y plataformas elevadoras en el año 2020, con la finalidad de entregar un servicio de calidad y excelencia para nuestros y futuros clientes. GoMAQ nace por una idea propia donde se busca potenciar la marca brindando un servicio de calidad, para ello contamos con maquinarias y trabajadores capacitados que están al nivel correspondiente con lo que entrega la empresa.</p>
+                        <p>En 2020 GOMAQ inicia su relación comercial con Agroservicios Manquehue en donde se nos destaca por nuestro compromiso y calidad. En el segundo semestre del mismo año cerramos contratos con  Agrofarming, Guillaume, Ferretería La Popular, Rentokil y Ferretería Prat. Consolidándonos como una empresa de excelencia y así demostrando que llegamos para quedarnos.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
