--- a/index.html
+++ b/index.html
@@ -152,15 +152,7 @@
                         </div>
                     </div>
 
-                    <div class="pogoSlider-slide" style="background-image:url(images/slide1.jpeg);">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="slide_text white_fonts">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="pogoSlider-slide" style="background-image:url(images/collage-02.png); background-position: center;">                        
                     </div>
 
                 </div>
@@ -193,7 +185,7 @@
                     <div class="full paddding_left_15">
                         <p>Empresa de servicios de arriendo de maquinarias.
 
-                            GoMAQ se convierte en un socio estratégico para sus clientes, entregando un
+                            GOMAQ se convierte en un socio estratégico para sus clientes, entregando un
                             servicio integral de arriendo de maquinarias, junto a un grupo profesional altamente capacitado.</p>
                     </div>
                 </div>
