--- a/elevadora.html
+++ b/elevadora.html
@@ -63,7 +63,7 @@
             <div class="container">
                 <div class="row">
                     <div class="logo_section">
-                        <a class="navbar-brand" href="index.html"><img src="images/logo-png-2.png" alt="image" width="250"></a>
+                        <a class="navbar-brand" href="index.html"><img src="images/LOGO TRANSPARENTE.png" alt="image" width="250"></a>
                     </div>
                     <div class="site_information">
                         <ul class="menu-arriba">
